applications/deployment-with-dockerfile/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deployment-with-dockerfile
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: deployment-with-dockerfile
    spec:
      containers:
      - name: deployment-with-dockerfile
        image: deployment-with-dockerfile
        ports:
        - containerPort: 80
